package com.rpsgame.app.game.players;

public enum Shapes {
    Rock,
    Paper,
    Scissors
}
