package com.rpsgame.app.game.players;

public enum TypePlayer {
    HUMANPLAYER,
    IA
}
